# chess-telemetry

./: .gitignore  README.md  config.example.toml  flake.nix  pyproject.toml
src/chess_telemetry/: analyze.py  cli.py  db.py  drills.py  engine.py  explorer.py  motifs.py  openings.py  prep.py  report.py  stats.py  suggest.py
src/chess_telemetry/fetch/: chesscom.py  lichess.py
tests/: test_analyze.py  test_cli.py  test_drills.py  test_engine_math.py  test_explorer.py  test_fetch_opponent.py  test_motifs.py  test_openings.py  test_stats.py  test_suggest_window.py
