[project]
name = "chess-telemetry"
version = "0.1.0"
description = "Automated chess game analysis and study-focus tracking"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
chess-telemetry = "chess_telemetry.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess_telemetry"]
